k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
        - name: mario
          image: 985124894155.dkr.ecr.us-east-1.amazonaws.com/mario-app:latest
          ports:
            - containerPort: 80
