k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-service
spec:
  type: ClusterIP
  selector:
    app: mario
  ports:
    - port: 80
      targetPort: 8080
